public/css/workorderprojet.css
#container-signature{
    border: 2px dashed #cecece;
    width: 100%;
    height: auto;
    margin-bottom: 15px;
}

.no-spin::-webkit-inner-spin-button, .no-spin::-webkit-outer-spin-button {
    -webkit-appearance: none !important;
    margin: 0 !important;
    -moz-appearance:textfield !important;
}

.unit-width {
    width : 18%;
    min-width: 34px;

}

td.unit-width.sorting input {
    padding : 2px;
}
.code-width{
    width: 20px;
}
#logoForm img{
    width: 100%;
    height: 20%;
    margin: 0;
    padding: 0;
}

h1{
    font-size: 25px;
    font-weight: bold;
    margin: 0 0 20px 0;
    text-align: center;
}

h2{
    font-size: 25px;
    text-align: center;
    margin: 0 0 20px 0;
}
.title-category{
    text-align: left;
    font-size: 14px;
}

.margin-top{
    margin-top: 10px;
}

input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button {
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    margin: 0;
}

